--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Todo</title>
+	<title>Svelte app</title>
 
-	<link rel='icon' type='image/png' href='./icon-512x512.png'>
+	<link rel='icon' type='image/png' href='./favicon.png'>
 	<link rel='stylesheet' href='./global.css'>
 	<link rel='stylesheet' href='./build/bundle.css'>
-	<link rel="manifest" href="./manifest.webmanifest">
 		
 
 	<script defer src='./build/bundle.js'></script>
+
 </head>
 
 <body style="background-color: #e9e9e9;">
